契約者情報入力機能を追加
