# demo/src/main/java/com/example/toshio/demo/dto/InsuredPerson.java
@@ -1,0 +1,12 @@
+package com.example.toshio.demo.dto;
+
+import com.example.toshio.demo.enums.RelationShip;
+
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+
+@Data
+@EqualsAndHashCode(callSuper = false)
+public class InsuredPerson extends Person {
+    private RelationShip relationship;
+}
