# demo/src/main/java/com/example/toshio/demo/dto/PolicyHolder.java
@@ -1,0 +1,10 @@
+package com.example.toshio.demo.dto;
+
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+
+@Data
+@EqualsAndHashCode(callSuper = false)
+public class PolicyHolder extends Person {
+
+}
